--- a/dapp-plugin/package.json
+++ b/dapp-plugin/package.json
@@ -8,7 +8,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "bun --filter='@wingriders/wallet-common' run build && rollup -c",
+    "clean": "rm -rf dist",
+    "build": "bun --filter='@wingriders/wallet-common' run build && bun run clean && rollup -c",
     "check": "bun biome check src",
     "fix": "bun run check --write",
     "test": "bun test",
