--- a/dapp-plugin/tsconfig.json
+++ b/dapp-plugin/tsconfig.json
@@ -12,6 +12,6 @@
     "emitDeclarationOnly": true,
     "resolveJsonModule": true
   },
-  "include": ["src"],
+  "include": ["src", "declarations.d.ts"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
