Enable noConsole biome rule

--- a/biome.json
+++ b/biome.json
@@ -34,6 +34,12 @@
       "suspicious": {
         "noExplicitAny": {
           "level": "off"
+        },
+        "noConsole": {
+          "level": "warn",
+          "options": {
+            "allow": ["warn", "error"]
+          }
         }
       }
     }
