Disable biome noForEach rule and setup auto linting in VS code

--- a/biome.json
+++ b/biome.json
@@ -41,6 +41,11 @@
             "allow": ["warn", "error"]
           }
         }
+      },
+      "complexity": {
+        "noForEach": {
+          "level": "off"
+        }
       }
     }
   },
