--- a/dapp-plugin/tsconfig.json
+++ b/dapp-plugin/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "./dist",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "emitDeclarationOnly": true,
