--- a/dapp-plugin/package.json
+++ b/dapp-plugin/package.json
@@ -26,6 +26,7 @@
     "rollup": "^4.21.3",
     "rollup-plugin-dts": "^6.1.1",
     "tslib": "^2.7.0",
+    "type-fest": "^4.26.1",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1"
   }
