--- a/gateway/package.json
+++ b/gateway/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "globals": "^15.9.0",
+    "ts-pattern": "^5.3.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vite-plugin-node-polyfills": "^0.22.0"
