--- a/gateway/package.json
+++ b/gateway/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^6.1.0",
     "@tanstack/react-router": "^1.57.18",
     "@wingriders/cab": "^2.0.28",
+    "@wingriders/wallet-common": "workspace:*",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "graphql": "^16.9.0",
