--- a/gateway/package.json
+++ b/gateway/package.json
@@ -25,6 +25,7 @@
     "@wingriders/cab": "^2.0.28",
     "@wingriders/wallet-common": "workspace:*",
     "axios": "^1.7.7",
+    "borc": "^3.0.0",
     "date-fns": "^4.1.0",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
@@ -34,9 +35,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.1",
-    "@happy-dom/global-registrator": "^15.7.4",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.3.3",
+    "@happy-dom/global-registrator": "^15.7.4",
     "@rollup/plugin-inject": "^5.0.5",
     "@tanstack/router-plugin": "^1.57.15",
     "@types/react": "^18.3.3",
