--- a/example-app/package.json
+++ b/example-app/package.json
@@ -20,7 +20,8 @@
     "@wingriders/cab": "^2.0.28",
     "@wingriders/wallet-dapp-plugin": "workspace:*",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.1",
