--- a/gateway/package.json
+++ b/gateway/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "globals": "^15.9.0",
+    "happy-dom": "^15.7.4",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
     "vite-plugin-node-polyfills": "^0.22.0",
