--- a/example-app/tsconfig.app.json
+++ b/example-app/tsconfig.app.json
@@ -18,7 +18,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "paths": {
+      "@wingriders/wallet-dapp-plugin": ["../dapp-plugin/src"]
+    }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [{ "path": "../dapp-plugin" }]
 }
