Pass secrets to the mirror workflow

--- a/.github/workflows/mirror-main.yml
+++ b/.github/workflows/mirror-main.yml
@@ -12,3 +12,6 @@ jobs:
     uses: WingRiders/wallet-private/.github/workflows/mirror.yml@main
     with:
       branch: main
+    secrets:
+      TECHRIDER_SSH_PUBLIC_KEY: ${{ secrets.TECHRIDER_SSH_PUBLIC_KEY }}
+      TECHRIDER_SSH_PRIVATE_KEY: ${{ secrets.TECHRIDER_SSH_PRIVATE_KEY }}
